--- a/app/views/reference_mailer/reference_email.txt.erb
+++ b/app/views/reference_mailer/reference_email.txt.erb
@@ -4,8 +4,8 @@ Hello, <%= @reference.firstname %>
 Your contact <%= @reference.taskee.full_name %> listed you as a reference on our platform.
 
 Does <%= @reference.taskee.firstname %> have these skills or expertise?
-<% @reference.skillsets.keys.each.with_index do |skillset, i| %>
-   <%= i + 1 %>). <%= skillset %>
+<% JSON.parse(@reference.skillsets["skills"]).each.with_index do |skill, i| %>
+   <%= i + 1 %>). <%= skill %>
 <% end %>
 Please follow this link to endorse <%= @reference.taskee.firstname %>: <%= @url %>
 
