--- a/app/views/task_managements/new.html.erb
+++ b/app/views/task_managements/new.html.erb
@@ -92,7 +92,7 @@
                 <p class="center-align">
                   <%= "#{@taskee.firstname} #{@taskee.lastname}" %>
                 </p>
-                <%= f.button "Create Task", class: "btn" %>
+                <%= f.button "Create Task", class: "btn", id: "create-task" %>
               </div>
             </div>
           </div>
