--- a/app/views/pages/search_result.html.erb
+++ b/app/views/pages/search_result.html.erb
@@ -21,7 +21,7 @@
               <%= link_to "View", signin_path(flash[:invalid] = "Login to continue"), class: "btn waves-effect searched-taskee" %>
             <% else %>
               <%= link_to "View", user_profile_path(obfuscate(taskee_id: taskee.id)),
-                          class: "btn waves-effect searched-taskee" %>
+                          class: "btn waves-effect searched-taskee", id: ("view-taskee"+taskee.id.to_s) %>
             <% end %>
           </p>
         </div>
