--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -4,6 +4,8 @@
    <p class="">Name: <%= task.name.capitalize %></p>
    <p>Price: <%= task.price %> </p>
    <p>Start Date: <%= task.start_date %> </p>
-   <span class="text-center"><a class="apply" href="#"> APPLY </a></span>
+   <div class="apply-link">
+    <span class="text-center"><a class="apply" href="#"> APPLY </a></span>
+   </div>
  </li>
  </ul>
