--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -25,19 +25,19 @@
           <div class="input-field col m6">
             <i class="material-icons prefix">perm_contact_calendar</i>
             <%= f.label :start_date%>
-             <%= f.date_field :start_date, class: "datepicker start_date", placeholder: "Start Date", required: true, :required => true %>
+             <%= f.date_field :start_date, class: "datepicker start_date", placeholder: "Start Date", required: true %>
           </div>
           <div class="input-field col m6">
             <i class="material-icons prefix">perm_contact_calendar</i>
             <%= f.label :end_date%>
-             <%= f.date_field :end_date, class: "datepicker end_date", placeholder: "End Date", required: true, :required => true %>
+             <%= f.date_field :end_date, class: "datepicker end_date", placeholder: "End Date", required: true %>
           </div>
         </div>
         <div class="row">
           <div class="input-field col m6">
             <i class="material-icons prefix">schedule</i>
             <%= f.label :time%>
-             <%= f.text_field "time", class: "timepicker", id: "timepicker", placeholder: "Start Time", :required => true %>
+             <%= f.text_field "time", class: "timepicker", id: "timepicker", placeholder: "Start Time" %>
           </div>
           <div class="input-field col m6">
             <i class="material-icons prefix">my_location</i>
