chore(gemfile): add coffee-rails gem

--- a/app/assets/stylesheets/base/_helpers.scss
+++ b/app/assets/stylesheets/base/_helpers.scss
@@ -92,7 +92,7 @@ button.btn[disabled] {
   position: relative;
 }
 .search-bar {
-  border-bottom: 2px solid #A43540;
+  border-bottom: 2px solid #ffffff;
   display: none;
   height: 3em;
   width: 100%;
