--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -12,7 +12,12 @@
     <div class="col s11 offset-s1 broadcast-container">
       <div class="row">
         <div class="col s3 right broadcast-clmn">
-          <a class="waves-effect waves-light btn-large teal broadcast-btn">Broadcast Task</a>
+          <% if @task.broadcasted %>
+            <%= link_to "Close Bid", close_bid_path, method: :get, class: "waves-effect waves-light btn-large red close-btn" %>
+          <% else %>
+            <a href="#broadcast_modal" class="waves-effect waves-light btn-large teal broadcast-btn">Broadcast Task</a>
+            <%= render 'tasks/partials/broadcast' %>
+          <% end %>
         </div>
       </div>
       <div class="row">
@@ -26,48 +31,49 @@
                 <div class="col s3 task-status">
                   <div class="status">
                     <% if @task.status == "unassigned" %>
-                      <i class="fa fa-ban text-red"></i> <span class="red-text"><%= @task.status %></span>
-                    <% end %>
+                      <i class="fa fa-ban text-red"></i> <span class="red-text">
+                      <% elsif @task.status == "started" %>
+                        <i class="fa fa-ban text-cyan"></i> <span class="cyan-text">
+                        <% end %><%= @task.status %></span>
+                    </div>
+                  </div>
+                  <div class="col s12 task-description">
+                    <%= @task.description %>
+                  </div>
+                  <div class="col s12 task-tags">
+                    <span><%= @task.skillset.name %></span>
                   </div>
                 </div>
-                <div class="col s12 task-description">
-                  <%= @task.description %>
-                </div>
-                <div class="col s12 task-tags">
-                  <span><%= @task.skillset.name %></span>
+              </div>
+              <div class="col s3 right">
+                <div class="row">
+                  <div class="col s12 task-pricing">
+                    <% if @task.broadcasted %>
+                      <span><%= number_to_currency(@task.price_range.first, precision: 0) %> - <%= number_to_currency(@task.price_range.last, precision: 0) %></span>
+                    <% else %>
+                      <span><%= number_to_currency(@task.price, precision: 0) %></span>
+                    <% end %>
+                  </div>
+                  <div class="col s12 task-due-date">
+                    <span>Due in <%= distance_of_time_in_words_to_now(@task.end_date) %></span>
+                  </div>
+                  <% if @task.broadcasted %>
+                    <div class="col s12 task-location-sm">
+                      <span><i class="material-icons">my_location</i> <%= @task.location %></span>
+                    </div>
+                  <% end %>
                 </div>
               </div>
             </div>
-            <div class="col s3 right">
-              <div class="row">
-                <div class="col s12 task-pricing">
-                  <span><%= number_to_currency(@task.price, precision: 0) %></span>
-                </div>
-                <div class="col s12 task-due-date">
-                  <span>Due in <%= distance_of_time_in_words_to_now(@task.end_date) %></span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <hr>
-          <div class="row">
-            <div class="col s12">
-              <h3>Location</h3>
-
-              <div class="location-title">
-                <span class="red-text"><%= @task.location %></span>
-              </div>
-              <div id="task_location_map">
-                <span class="hide map-center"><%= @task.location %></span>
-                <span class="hide map-latitude"><%= @task.latitude %></span>
-                <span class="hide map-longitude"><%= @task.longitude %></span>
-                <img src="" alt="Task location" class="hide"/>
-              </div>
-            </div>
+            <hr>
+            <% if @task.broadcasted %>
+              <%= render 'tasks/partials/bids_list' %>
+            <% else %>
+              <%= render 'tasks/partials/location' %>
+            <% end %>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
