fix(needs spec): Fix needs spec
- Fix failing needs spec

[#123036611]

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -38,7 +38,7 @@
           <div class="row">
             <div class="input-field col m6 jiji">
               <i class="material-icons prefix ji">work</i>
-              <%= f.collection_select :skillset_id, @skillsets, :id, :name, prompt: "Choose a skillset", required: true %>
+              <%= f.collection_select :skillset_id, @skillsets, :id, :name, prompt: "Choose a skillset" %>
             </div>
             <div class=" input-field col m6">
               <i class="material-icons prefix">credit_card</i>
