--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="container">
     <div class="col m12">
-      <h3>Create Need</h3>
+      <h3>Create new Task</h3>
        <%= form_for @task do |f| %>
        <div class="row">
          <%= render "partials/error_msg", object:  @task%>
@@ -12,7 +12,7 @@
       <div class="row">
           <div class="input-field col m6">
             <i class="material-icons prefix">edit_mode</i>
-            <%= f.label :name %>
+            <%= f.label :task_title %>
             <%= f.text_field :name, class: "form-control", :required => true %>
           </div>
         <div class=" input-field col m6">
@@ -58,7 +58,7 @@
 
         <div class="row">
           <div class="text-center" style="text-align: center">
-            <button class="btn waves-effect waves-light" type="submit">Post Need
+            <button class="btn waves-effect waves-light" type="submit">Create Task
               <i class="material-icons right">send</i>
             </button>
           </div>
