--- a/app/views/tasks/partials/_location.html.erb
+++ b/app/views/tasks/partials/_location.html.erb
@@ -2,14 +2,18 @@
   <div class="col s12">
     <h3>Location</h3>
 
-    <div class="location-title">
-      <span class="red-text"><%= @task.location %></span>
-    </div>
-    <div id="task_location_map">
-      <span class="hide map-center"><%= @task.location %></span>
-      <span class="hide map-latitude"><%= @task.latitude %></span>
-      <span class="hide map-longitude"><%= @task.longitude %></span>
-      <img src="" alt="Task location" class="hide"/>
+    <div class="row">
+      <div class="location-section col m10 offset-m1">
+        <div class="location-title">
+          <span class="red-text"><%= @task.location %></span>
+        </div>
+        <div id="task_location_map">
+          <span class="hide map-center"><%= @task.location %></span>
+          <span class="hide map-latitude"><%= @task.latitude %></span>
+          <span class="hide map-longitude"><%= @task.longitude %></span>
+          <img src="" alt="Task location" class="hide"/>
+        </div>
+      </div>
     </div>
   </div>
 </div>
