ft(add taskee references): add form validation
[Finishes #123043311]

--- a/app/assets/stylesheets/styles/_references.scss
+++ b/app/assets/stylesheets/styles/_references.scss
@@ -15,3 +15,17 @@
 .fixed-action-btn {
   bottom: 105px;
 }
+
+label {
+  width: 100%;
+}
+
+label:after {
+  @include transition-property(all !important);
+  @include transform(none);
+  font-size: 0.8rem;
+}
+
+label:not(.active):after {
+  @include transform(translateY(-140%));
+}
