override faker avatar

--- a/app/views/dashboard/endorsements/new.html.erb
+++ b/app/views/dashboard/endorsements/new.html.erb
@@ -26,7 +26,7 @@
           <%= text_field_tag :recommendation, nil,
           placeholder: "Ex. #{@reference.taskee.firstname} is very detail-oriented and produced great results for the company...",
           class: "materialize-textarea", required: true %>
-          <label for="recommendation"></label>
+          <label for="recommendation" style="position: initial !important;"></label>
         </div>
         <div class="input-field row">
           <button class="btn waves-effect waves-light" type="submit">Send
