--- a/app/views/reference_mailer/reference_email.html.erb
+++ b/app/views/reference_mailer/reference_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Hello, <%= @reference.firstname %></h1>
     <p>
-      Your contact <%= @reference.taskee.full_name %> listed you as a reference on our platform.
+      Your contact <%= @reference.taskee.fullname %> listed you as a reference on our platform.
     </p>
     <p>
       Does <%= @reference.taskee.firstname %> have these skills or expertise?
