feat (views): implement ability to get taskees by a skillset

--- a/app/assets/stylesheets/base/_helpers.scss
+++ b/app/assets/stylesheets/base/_helpers.scss
@@ -104,6 +104,9 @@ button.btn[disabled] {
   font-size: 1em !important;
   padding-left: 0 !important;
 }
+#my-search-field {
+  width: 220px;
+}
 .apply{
   color: #eb4D5c !important;
 }
