--- a/app/views/pages/search_result.html.erb
+++ b/app/views/pages/search_result.html.erb
@@ -1,5 +1,6 @@
+<%= render 'partials/sidebar_dashboard' %>
 <main>
-<section class="col m9 s12 offset-m3">
+<section class="col m9 s12 offset-m3 container search-height">
   <div class="row">
     <% if @taskees.nil? || @taskees.empty? %>
       <div class="col m8 offset-m2 s6">
