--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,70 +1,32 @@
 <section class="main row">
-  <header class="center-align">
-    <h3 class="center-align">
-      Create a new account
-    </h3>
-    <p>
-      Come join the workdey community. Set up your account.
-    </p>
-  </header>
-  <div class="col s5 offset-s1">
+  <div class="col s6 offset-s3">
     <div class="row">
       <div class="auth signup card" class="col s12">
-        <div class="row">
-          <%= form_for @user, html: {class: "col s12"} do |f| %>
-            <%= render "partials/error_msg", object: @user %>
-            <div class="row">
-              <div class="input-field col s6">
-                <%= f.text_field :firstname, required: true, placeholder: "First Name" %>
-                <i class="material-icons">assignment_ind</i>
-              </div>
-
-              <div class="input-field col s6">
-                <%= f.text_field :lastname, required: true, placeholder: "Last Name" %>
-                <i class="material-icons">assignment_ind</i>
-              </div>
-
-              <div class="input-field col s12">
-                <%= f.email_field :email, required: true, placeholder: "Email Address" %>
-                <i class="material-icons">mail</i>
-              </div>
-
-              <div class="input-field col s12">
-                <%= f.password_field :password, required: true, placeholder: "Password" %>
-                <i class="material-icons">lock</i>
-              </div>
-
-
-              <div class="col s12">
-
-                <%= f.button raw("Create my account <i class='material-icons right'>send</i>"), class: "submit btn waves-effect" %>
-              </div>
-
-              <div class="col s12 login-path">
-                <p>Already have an account?
-                  <%= link_to "Log in", signin_path %>
-                </p>
-              </div>
+        <%= form_for @user do |f| %>
+          <div class="row">
+            <div class="input-field col s12">
+              <%= f.text_field :firstname %>
+              <%= f.label :firstname %>
             </div>
-          <% end %>
+            <div class="input-field col s12">
+              <%= f.text_field :lastname %>
+              <%= f.label :lastname %>
+            </div>
+            <div class="input-field col s12">
+              <%= f.email_field :email %>
+              <%= f.label :email %>
+            </div>
+            <div class="input-field col s12">
+              <%= f.password_field :password %>
+              <%= f.label :password %>
+            </div>
+            <%= f.submit %>
+          </div>
+        <% end %>
+        <div class="col s12">
+          <p><%= link_to raw("<i class='fa fa-facebook-square'></i> Facebook"), "/auth/facebook", class: "btn btn-fb" %></p>
+          <p><%= link_to raw("<i class='fa fa-google-plus-square'></i> Google"), "/auth/google_oauth2", class: "btn btn-goog" %></p>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col s4 offset-s1 oauth">
-    <div class="card">
-      <div class="card-content">
-        <p class="be-cool">
-          Sign up with:
-        </p>
-        <p>
-          <%= link_to raw("<i class='fa fa-facebook-square'></i> Facebook"), "/auth/facebook", class: "btn btn-fb" %>
-        </p>
-
-        <p>
-           <%= link_to raw("<i class='fa fa-google-plus-square'></i> Google"), "/auth/google_oauth2", class: "btn btn-goog" %>
-        </p>
       </div>
     </div>
   </div>
