feat (views): make views to display taskees

--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -34,6 +34,12 @@ strong {
 }
 
 // Sidebar
+.taskee {
+  height: 100px;
+}
+#center {
+  text-align: center;
+}
 
 .sidebar {
     background-color: #333;
