--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -4,7 +4,7 @@
     <%= link_to raw("<li class='side-nav-button'>Edit Profile</li>"), profile_path %><hr>
     <%= link_to raw("<li class='side-nav-button'>Biddings</li>"), biddings_path %><hr>
     <% if current_user.taskee? %>
-      <%= link_to raw("<li class='side-nav-button'>My Skillset</li>"), skillsets_path %> <hr>
+      <%= link_to raw("<li class='side-nav-button'>My Skillset</li>"), my_skillsets_path %> <hr>
       <%= link_to raw("<li class='side-nav-button'>My References</li>"), dashboard_references_path %> <hr>
     <% end %>
     <% if current_user.tasker? %>
