--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,9 @@
 
   <%= render "partials/footer" %>
 
-  <%#= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" %>
-  <%= stylesheet_link_tag "https://cdn.jsdelivr.net/sweetalert2/4.0.16/sweetalert2.min.css" %>
-  <%= javascript_include_tag "https://cdn.jsdelivr.net/sweetalert2/4.0.16/sweetalert2.min.js"  %>
-  <%#= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"  %>
+  <%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" %>
+  
+  <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"  %>
   <%= stylesheet_link_tag "pickDate", "materialize.clockpicker" %>
   <%= javascript_include_tag "https://cdn.firebase.com/js/client/2.3.2/firebase.js" if current_page?(quiz_path) %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
